<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00043E"
    tools:context=".MainActivity"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:srcCompat="@drawable/gs" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_rounded"
        android:onClick="ingresar"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/b2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/et2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_rounded"
        android:onClick="registrarse"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/b1"
        app:layout_constraintTop_toBottomOf="@+id/et2" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:ems="20"
        android:maxLength="10"
        android:hint="@string/numero"
        android:background="@drawable/imput_text"
        android:gravity="center"
        android:inputType="number"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:ems="20"
        android:maxLength="15"
        android:hint="@string/password"
        android:background="@drawable/imput_text"
        android:gravity="center"
        android:inputType="numberPassword"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/et1"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <CheckBox
        android:id="@+id/cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordarinicio"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/b1"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/et2"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.1"
        />


</androidx.constraintlayout.widget.ConstraintLayout>